[gd_scene load_steps=12 format=3 uid="uid://c4a87t3d0sguw"]

[ext_resource type="Script" uid="uid://ba7irgwnwr4vk" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://bv37widdkpm1f" path="res://assets/player.png" id="2_qhqgy"]
[ext_resource type="Texture2D" uid="uid://cx11k4l66snmh" path="res://assets/Gun.png" id="3_dqkch"]
[ext_resource type="AudioStream" uid="uid://c05k810nvg3lo" path="res://sfx/gunshot-352466.mp3" id="4_dqkch"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qhqgy"]
radius = 17.69231
height = 36.92308

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dqkch"]
radius = 25.0
height = 84.0

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "turn_laser_on"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserLine2D:width")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 6.0, 2.0]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserLine2D:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tuyoq"]
_data = {
&"RESET": SubResource("Animation_qlg0r"),
&"turn_laser_on": SubResource("Animation_dqkch")
}

[sub_resource type="CapsuleMesh" id="CapsuleMesh_dqkch"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qlg0r"]
radius = 0.51948047
height = 1.9999996

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_3vyb7")

[node name="LaserLine2D" type="Line2D" parent="."]
points = PackedVector2Array(60, 1, 1000, 0)
width = 2.0
default_color = Color(1, 0, 0, 0.7764706)

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("2_qhqgy")

[node name="Gun" type="Sprite2D" parent="Body"]
position = Vector2(58, 5)
scale = Vector2(0.6000006, 1)
texture = ExtResource("3_dqkch")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(2.6, 2.6)
shape = SubResource("CapsuleShape2D_qhqgy")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-8, 0)
scale = Vector2(1.0848151, 1.0442463)
shape = SubResource("CapsuleShape2D_dqkch")

[node name="CameraRemoteTransfer" type="RemoteTransform2D" parent="."]

[node name="ShootRaycast" type="RayCast2D" parent="."]
position = Vector2(89, 0)
target_position = Vector2(1000, 0)
collision_mask = 9
collide_with_areas = true

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dqkch")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tuyoq")
}

[node name="Bullet" type="MeshInstance2D" parent="."]
modulate = Color(0.8004118, 0.559106, 0.2097817, 1)
position = Vector2(108, 1.0000001)
scale = Vector2(38.5, 7.0000005)
mesh = SubResource("CapsuleMesh_dqkch")

[node name="Area2D" type="Area2D" parent="Bullet"]
scale = Vector2(0.9999998, 0.99999976)
collision_layer = 32
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet/Area2D"]
scale = Vector2(1.0000002, 1.0000004)
shape = SubResource("CapsuleShape2D_qlg0r")

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
